--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: rlins <rlins@student.42sp.org.br>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/12 14:04:52 by rlins             #+#    #+#              #
-#    Updated: 2022/11/22 13:38:28 by rlins            ###   ########.fr        #
+#    Updated: 2022/11/22 14:10:30 by rlins            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -55,6 +55,7 @@ SRC_FILES =	ft_atoi.c \
 			ft_strdup.c \
 			ft_strjoin.c \
 			ft_isspace.c \
+			ft_ato_long.c \
 			ft_strlcat.c \
 			ft_strlcpy.c \
 			ft_strlen.c \
